; ModuleID = '/home/carl/AnghaBench/linux/kernel/extr_hung_task.c_rcu_lock_break.c'
source_filename = "/home/carl/AnghaBench/linux/kernel/extr_hung_task.c_rcu_lock_break.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.task_struct = type { i32 }

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.task_struct*, %struct.task_struct*)* @rcu_lock_break to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rcu_lock_break(%struct.task_struct* %0, %struct.task_struct* %1) #0 {
  %3 = alloca %struct.task_struct*, align 8
  %4 = alloca %struct.task_struct*, align 8
  %5 = alloca i32, align 4
  store %struct.task_struct* %0, %struct.task_struct** %3, align 8
  store %struct.task_struct* %1, %struct.task_struct** %4, align 8
  %6 = load %struct.task_struct*, %struct.task_struct** %3, align 8
  %7 = call i32 @get_task_struct(%struct.task_struct* %6)
  %8 = load %struct.task_struct*, %struct.task_struct** %4, align 8
  %9 = call i32 @get_task_struct(%struct.task_struct* %8)
  %10 = call i32 (...) @rcu_read_unlock()
  %11 = call i32 (...) @cond_resched()
  %12 = call i32 (...) @rcu_read_lock()
  %13 = load %struct.task_struct*, %struct.task_struct** %3, align 8
  %14 = call i64 @pid_alive(%struct.task_struct* %13)
  %15 = icmp ne i64 %14, 0
  br i1 %15, label %16, label %20

16:                                               ; preds = %2
  %17 = load %struct.task_struct*, %struct.task_struct** %4, align 8
  %18 = call i64 @pid_alive(%struct.task_struct* %17)
  %19 = icmp ne i64 %18, 0
  br label %20

20:                                               ; preds = %16, %2
  %21 = phi i1 [ false, %2 ], [ %19, %16 ]
  %22 = zext i1 %21 to i32
  store i32 %22, i32* %5, align 4
  %23 = load %struct.task_struct*, %struct.task_struct** %4, align 8
  %24 = call i32 @put_task_struct(%struct.task_struct* %23)
  %25 = load %struct.task_struct*, %struct.task_struct** %3, align 8
  %26 = call i32 @put_task_struct(%struct.task_struct* %25)
  %27 = load i32, i32* %5, align 4
  ret i32 %27
}

declare dso_local i32 @get_task_struct(%struct.task_struct*) #1

declare dso_local i32 @rcu_read_unlock(...) #1

declare dso_local i32 @cond_resched(...) #1

declare dso_local i32 @rcu_read_lock(...) #1

declare dso_local i64 @pid_alive(%struct.task_struct*) #1

declare dso_local i32 @put_task_struct(%struct.task_struct*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
